unpackaged/main/default/objects/GTM_Ticket__c/fields/Sprint_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_End_Date__c</fullName>
    <formula>IF(
    ISBLANK(TEXT(Estimated_Sprint__c)),
    null,
    DATEVALUE(MID(
        TEXT(Estimated_Sprint__c),
        FIND(&quot; / &quot;, TEXT(Estimated_Sprint__c)) + 3,
        LEN(TEXT(Estimated_Sprint__c)) - FIND(&quot; / &quot;, TEXT(Estimated_Sprint__c)) - 2
    ))
)</formula>
    <label>Sprint End Date</label>
    <type>Date</type>
</CustomField>