unpackaged/main/default/objects/GTM_Ticket__c/fields/Sprint_Number__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Number__c</fullName>
    <description>Sprint number parsed from Estimated Sprint value.</description>
    <formula>IF(
    ISBLANK(TEXT(Estimated_Sprint__c)),
    null,
    VALUE(
        MID(
            TEXT(Estimated_Sprint__c),
            FIND(&quot;Sprint &quot;, TEXT(Estimated_Sprint__c)) + LEN(&quot;Sprint &quot;),
            FIND(&quot;: &quot;, TEXT(Estimated_Sprint__c)) - FIND(&quot;Sprint &quot;, TEXT(Estimated_Sprint__c)) - LEN(&quot;Sprint &quot;)
        )
    )
)</formula>
    <label>Sprint Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>