unpackaged/main/default/objects/GTM_Ticket__c/fields/Status_Number__c.field-meta.xml
<CustomField>
    <fullName>Status_Number__c</fullName>
    <label>Status Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>