unpackaged/main/default/objects/GTM_Ticket__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <formula>DATEVALUE(Submitted_At__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>