unpackaged/main/default/objects/GTM_Ticket__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GTM_Ticket_Subtype</valueSetName>
    </valueSet>
</CustomField>