unpackaged/main/default/objects/GTM_Ticket__c/fields/Ticket_Definition__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ticket Definition</label>
    <referenceTo>GTM_Ticket_Definition__c</referenceTo>
    <relationshipLabel>GTM Tickets</relationshipLabel>
    <relationshipName>GTM_Tickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>