unpackaged/main/default/objects/GTM_Ticket__c/fields/Ticket_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Hours__c</fullName>
    <description>Extracts the number of estimated hours from the &#39;Priority&#39; picklist value.</description>
    <formula>IF(
  ISPICKVAL(Size__c, &quot;XS (10 min)&quot;),
  0.17,
  IF(
    ISPICKVAL(Size__c, &quot;S (1 hr)&quot;),
    1,
    IF(
      ISPICKVAL(Size__c, &quot;XXL (40+ hrs)&quot;),
      40,
      VALUE(
        SUBSTITUTE(
          SUBSTITUTE(
            MID(
              TEXT(Size__c),
              FIND(&quot;(&quot;, TEXT(Size__c)) + 1,
              FIND(&quot;hrs&quot;, TEXT(Size__c)) - FIND(&quot;(&quot;, TEXT(Size__c)) - 1
            ),
            &quot;,&quot;, &quot;&quot;
          ),
          &quot; &quot;,
          &quot;&quot;
        )
      )
    )
  )
)</formula>
    <inlineHelpText>Extracts the number of estimated hours from the &#39;Priority&#39; picklist value.</inlineHelpText>
    <label>Ticket Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>