unpackaged/main/default/objects/GTM_Ticket__c/fields/Turn_On_Banner_Disrupt_Service_Decision__c.field-meta.xml
<CustomField>
    <fullName>Turn_On_Banner_Disrupt_Service_Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE if there was an internal decision to turn on a customer&#39;s expiration banner within Retool.

External Systems Utilization: Retool</description>
    <inlineHelpText>Checked TRUE if there was an internal decision to turn on a customer&#39;s expiration banner within Retool.</inlineHelpText>
    <label>Turn On Banner Disrupt Service Decision</label>
    <type>Checkbox</type>
</CustomField>