unpackaged/main/default/objects/GTM_Ticket__c/fields/Underway_At__c.field-meta.xml
<CustomField>
    <fullName>Underway_At__c</fullName>
    <label>Underway At</label>
    <type>Date</type>
</CustomField>