unpackaged/main/default/objects/GTM_Ticket__c/fields/Watched_By_Names__c.field-meta.xml
<CustomField>
    <fullName>Watched_By_Names__c</fullName>
    <label>Watched By: Names</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>