unpackaged/main/default/objects/GTM_Ticket__c/fields/Write_off_Category__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Category__c</fullName>
    <description>Used to attribute what booking channel the write-off will hit.

External Systems Utilization: Retool</description>
    <inlineHelpText>Used to attribute what booking channel the write-off will hit.</inlineHelpText>
    <label>Write-off Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Nue</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>