unpackaged/main/default/objects/GTM_Ticket__c/fields/Write_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Date__c</fullName>
    <description>Used to attribute when the write-off will hit. This is tied to the `Write_off_Quarter__c` formula field, which is used in our reporting.

External Systems Utilization: Retool</description>
    <inlineHelpText>Used to attribute when the write-off will hit. This is tied to the `Write_off_Quarter__c` formula field, which is used in our reporting.</inlineHelpText>
    <label>Write-off Date</label>
    <type>Date</type>
</CustomField>