unpackaged/main/default/objects/GTM_Ticket__c/fields/Write_off_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Quarter__c</fullName>
    <description>Used to attribute what quarter the write-off will hit (in the YYYY-QQ format).</description>
    <formula>TEXT(YEAR(Write_off_Date__c))
&amp; &quot;-&quot;&amp;
CASE(Month(Write_off_Date__c),
1, &quot;Q1&quot; ,
2, &quot;Q1&quot;,
3, &quot;Q1&quot;,
4, &quot;Q2&quot;,
5, &quot;Q2&quot;,
6, &quot;Q2&quot;,
7, &quot;Q3&quot;,
8, &quot;Q3&quot;,
9, &quot;Q3&quot;,
10, &quot;Q4&quot;,
11, &quot;Q4&quot;,
12, &quot;Q4&quot;,
&quot;None&quot;)</formula>
    <inlineHelpText>Used to attribute what quarter the write-off will hit (in the YYYY-QQ format).</inlineHelpText>
    <label>Write-off Quarter</label>
    <type>Text</type>
</CustomField>