unpackaged/main/default/objects/GTM_Ticket__c/recordTypes/Collections.recordType-meta.xml
<RecordType>
    <fullName>Collections</fullName>
    <active>true</active>
    <label>Collections</label>
</RecordType>