unpackaged/main/default/objects/GTM_Ticket__c/recordTypes/Epic.recordType-meta.xml
<RecordType>
    <fullName>Epic</fullName>
    <active>true</active>
    <description>Record type used for Parent Tickets.</description>
    <label>Epic</label>
</RecordType>