unpackaged/main/default/objects/GTM_Ticket__c/validationRules/descope_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>descope_reason</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(Descope_Reason__c,&quot;&quot;)) &amp;&amp; ISBLANK(Descope_Reason_Details__c)</errorConditionFormula>
    <errorDisplayField>Descope_Reason_Details__c</errorDisplayField>
    <errorMessage>Descope reason details required for descoped ticket</errorMessage>
</ValidationRule>