unpackaged/main/default/objects/GTM_Ticket__c/validationRules/descope_status_without_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>descope_status_without_reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c,&quot;Descoped&quot;) &amp;&amp; ISPICKVAL(Descope_Reason__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Descope_Reason__c</errorDisplayField>
    <errorMessage>Please set a descope reason to descope this ticket</errorMessage>
</ValidationRule>