unpackaged/main/default/objects/GTM_Ticket__c/validationRules/Requestor_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Requestor_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Requestor__c) &amp;&amp;  Record_Type_Name__c != &#39;Epic&#39;</errorConditionFormula>
    <errorDisplayField>Requestor__c</errorDisplayField>
    <errorMessage>Requestor is required</errorMessage>
</ValidationRule>