unpackaged/main/default/objects/GTM_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <columns>Parent_Ticket__c</columns>
    <columns>Problem__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Next_Step_Date__c</columns>
    <columns>Sensitivity_Level__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>