unpackaged/main/default/objects/GTM_Ticket__c/listViews/Tickets_Assigned_to_Me.listView-meta.xml
<ListView>
    <fullName>Tickets_Assigned_to_Me</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Days_Until_Due__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Age__c</columns>
    <columns>Requestor__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Next_Step_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Tickets Assigned to Me</label>
</ListView>